--- a/reference.bib
+++ b/reference.bib
@@ -1,5 +1,7 @@
 @MastersThesis{winters:automaticjokegeneration:2017,
-    author    = {Winters, Thomas},
+	author    = {Winters, Thomas and
+                  Nys, Vincent and
+                  De Schreye, Daniel},
     title     = {Automatic Joke Generation: Learning Humour from Examples},
     school    = {KU Leuven, Leuven, Belgium},
     address   = {Departement Computerwetenschappen, Celestijnenlaan 200A bus 2402, B-3001 Heverlee},
