--- a/reference.bib
+++ b/reference.bib
@@ -1,10 +1,16 @@
-@MastersThesis{winters:automaticjokegeneration:2017,
-	author    = {Winters, Thomas and
-                  Nys, Vincent and
-                  De Schreye, Daniel},
-    title     = {Automatic Joke Generation: Learning Humour from Examples},
-    school    = {KU Leuven, Leuven, Belgium},
-    address   = {Departement Computerwetenschappen, Celestijnenlaan 200A bus 2402, B-3001 Heverlee},
-    year      = {2017},
-    month     = {8}
+@inproceedings{winters:automaticjokegeneration:2018,
+	issn = {0302-9743},
+	abstract = {Computational humor systems often employ explicit rules encoding assumptions about what constitutes a funny joke. This paper explores how a program can teach itself to generate jokes based on a corpus of rated example jokes. We implement a system called Generalized Analogy Generator (GAG) capable of generating jokes using the "I like my X like I like my Y, Z" template. We use established humor theory and extend computational humor concepts to allow the system to learn the structures of the given jokes and estimate how funny people might find specific instantiations of joke structures. We also implement a platform for the collection of jokes and their ratings, which are used for the training data and evaluation of the system. Since GAG uses generalized components and learns its own schemas, this program successfully generalizes the most well-known analogy generator in the computational humor field.},
+	journal = {Distributed, Ambient and Pervasive Interactions: Technologies and Contexts},
+	pages = {360--377},
+	volume = {10922 LNCS},
+	publisher = {Springer International Publishing},
+	isbn = {9783319911304},
+	year = {2018},
+	title = {Automatic joke generation: Learning humor from examples},
+	language = {eng},
+	author = {Winters, Thomas and Nys, Vincent and De Schreye, Danny},
+	keywords = {Computational humor},
+	organization = {Streitz, Norbert}
 }
+
